--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,9 @@ li.works_sub_item {
   padding-top: 112px;
   margin-top: -112px;
 }
-.sp_btn p {
+
+.sp_btn p,
+.sp_btn {
   display: none;
 }
 @media screen and (max-width: 1100px) {
@@ -423,7 +425,7 @@ li.works_sub_item {
   .line {
     max-width: 28px;
     max-height: 80px;
-    margin: 30px auto;
+    margin: 80px auto;
   }
 }
 
@@ -529,7 +531,6 @@ li.works_sub_item {
   font-size: 16px;
   line-height: 1.75;
   text-align: center;
-  font-weight: 600;
   margin: 40px 0 36px;
 }
 .aboutme-button {
@@ -653,12 +654,12 @@ li.works_sub_item {
     display: none;
   }
   .aboutme-button {
-    width: 314px;
+    width: 200px;
     height: 74px;
-    margin: 0 auto 122px;
+    margin: 0 auto 160px;
   }
   .about_me a {
-    font-size: 28px;
+    font-size: 20px;
   }
   .about_circle {
     width: 20px;
@@ -719,7 +720,7 @@ li.works_sub_item {
 }
 .skill_contents {
   max-width: 1000px;
-  margin: 89px auto;
+  margin: 0 auto;
 }
 .skill_contents ul {
   display: flex;
@@ -728,7 +729,7 @@ li.works_sub_item {
   padding: 0 40px;
 }
 .skill_box {
-  max-width: 410px;
+  max-width: 315px;
   width: 40%;
   margin-bottom: 102px;
 }
@@ -785,6 +786,11 @@ li.works_sub_item {
 .skill {
   margin-bottom: 385px;
 }
+@media (max-width: 870px) {
+  .skill_tool {
+    font-size: 13px;
+  }
+}
 @media (max-width: 768px) {
   .skill_text1 {
     font-size: 20px;
@@ -803,9 +809,9 @@ li.works_sub_item {
     align-items: center;
   }
   .skill_box {
-    max-width: 315px;
+    max-width: 215px;
     margin-bottom: 56px;
-    width: 90%;
+    width: 100%;
   }
   .skill_contents_title {
     margin: 30px auto 30px auto;
@@ -816,7 +822,8 @@ li.works_sub_item {
     font-size: 18px;
   }
   .skill_tool {
-    font-size: 12px;
+    font-size: 11px;
+    width: 100%;
   }
   .skill_circle1 p {
     font-size: 16px;
@@ -870,42 +877,42 @@ li.works_sub_item {
 .slick-prev {
   left: 3%;
   z-index: 99;
-  width: 71px;
-  height: 71px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  border: 4px solid white;
+  border: 4px solid #ff853c;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-left: 22px;
+  padding-left: 10px;
 }
 .slick-next {
   right: 3%;
-  width: 71px;
-  height: 71px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  border: 4px solid white;
+  border: 4px solid #ff853c;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-right: 22px;
+  padding-right: 10px;
 }
 .slick-next:before {
   content: "";
   display: block;
-  width: 31px;
-  height: 31px;
-  border-top: 4px solid white;
-  border-right: 4px solid white;
+  width: 15px;
+  height: 15px;
+  border-top: 4px solid #ff853c;
+  border-right: 4px solid #ff853c;
   transform: rotate(45deg);
 }
 .slick-prev:before {
   content: "";
   display: block;
-  width: 31px;
-  height: 31px;
-  border-top: 4px solid white;
-  border-right: 4px solid white;
+  width: 15px;
+  height: 15px;
+  border-top: 4px solid #ff853c;
+  border-right: 4px solid #ff853c;
   transform: rotate(-135deg);
 }
 .slick-track {
@@ -994,39 +1001,39 @@ li.works_sub_item {
     width: 35px;
     height: 35px;
     padding-left: 6px;
-    border: 2px solid white;
+    border: 2px solid #ff853c;
   }
   .slick-prev:before {
     width: 10px;
     height: 10px;
-    border-top: 2px solid white;
-    border-right: 2px solid white;
+    border-top: 2px solid #ff853c;
+    border-right: 2px solid #ff853c;
   }
   .slick-next {
     width: 35px;
     height: 35px;
     padding-right: 6px;
-    border: 2px solid white;
+    border: 2px solid #ff853c;
   }
   .slick-next:before {
     width: 10px;
     height: 10px;
-    border-top: 2px solid white;
-    border-right: 2px solid white;
+    border-top: 2px solid #ff853c;
+    border-right: 2px solid #ff853c;
   }
   .slick-dots li {
     margin: 0 12px;
   }
   .works-button {
-    width: 314px;
+    width: 200px;
     height: 74px;
-    margin: 67px auto 122px;
+    margin: 67px auto 160px;
   }
   .works_more {
     align-items: center;
   }
   .works_more a {
-    font-size: 28px;
+    font-size: 20px;
   }
   .works_circle1 {
     width: 20px;
@@ -1085,6 +1092,7 @@ li.works_sub_item {
 .contact_inquiry label {
   font-size: 16px;
   display: flex;
+  padding-bottom: 8px;
 }
 #name,
 #address {
@@ -1108,12 +1116,12 @@ li.works_sub_item {
 }
 .contact_button {
   background: #ff853c;
-  width: 386px;
-  height: 70px;
+  max-width: 200px;
+  padding: 20px 0;
   border: none;
-  margin: 0 auto 160px auto;
   border-radius: 8px;
   cursor: pointer;
+  margin: 0 auto;
 }
 .contact_button_text {
   font-size: 24px;
@@ -1121,8 +1129,9 @@ li.works_sub_item {
   border: none;
   background: none;
   color: #fff;
-  margin: 20px 36%;
   cursor: pointer;
+  display: flex;
+  margin: 0 auto;
 }
 textarea {
   width: 100%;
@@ -1137,7 +1146,13 @@ textarea:focus {
   border-color: #4caf50;
   outline: none;
 }
-
+textarea::placeholder {
+  font-weight: normal;
+  font-family: "Arial", sans-serif;
+}
+form {
+  margin-bottom: 160px;
+}
 @media (max-width: 768px) {
   .contact_text1 {
     font-size: 20px;
@@ -1162,12 +1177,8 @@ textarea:focus {
   .contact_inquiry {
     margin-bottom: 36px;
   }
-  .contact_button {
-    margin: 0 auto 108px auto;
-  }
-  textarea::placeholder {
-    font-weight: normal;
-    font-family: "Arial", sans-serif;
+  .contact_Information br {
+    display: none;
   }
 }
 /*footer*/
@@ -1245,14 +1256,6 @@ footer p {
   footer p {
     padding-bottom: 90px;
   }
-  .contact_button {
-    width: 314px;
-    height: 74px;
-  }
-  .contact_button_text {
-    font-size: 28px;
-    margin: 16px 95px;
-  }
 }
 
 /*scroll_circle*/
@@ -1278,4 +1281,30 @@ footer p {
   .footer_works_arrow {
     right: 35%;
   }
+}
+#page-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 14px;
+  line-height: 1;
+  z-index: 100;
+}
+#page-top a {
+  background: #ff853c;
+  text-decoration: none;
+  color: #fff;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  opacity: 0.9;
+  transition: all 1.5s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 13px;
+}
+#page-top a:hover {
+  text-decoration: none;
+  opacity: 0.5;
 }
