--- a/css/works_1.css
+++ b/css/works_1.css
@@ -44,20 +44,30 @@
 }
 .header_about_item {
   position: relative;
+  cursor: pointer;
 }
 .about_item {
-  color: #fff;
-  padding: 10px;
+  /* 配置の調節 */
   background: #ff853c;
+  padding: 0 10px;
   border-radius: 8px;
   position: absolute;
-  top: 105%;
-  right: 70%;
-  display: none;
+  top: 50px;
+  flex-direction: column;
+  justify-content: center;
+  height: 0; /* 高さ0で最初は非表示に */
+  overflow: hidden; /* 高さ0からはみ出た中身を隠す */
+  transition: 0.5s; /* ホバー時の動きをゆっくりに */
 }
-
+.about_item li {
+  color: #fff;
+}
+.header_about_item:hover .about_item {
+  height: 41px;
+  padding: 10px;
+}
 /*header_works*/
-li.works_item {
+.header_works_item {
   position: relative;
 }
 .header_works_arrow {
@@ -68,17 +78,26 @@ li.works_item {
   transform: rotate(135deg);
   position: absolute;
   top: 40%;
-  right: 33%;
+  right: -33%;
 }
 .works_item {
-  color: #fff;
-  padding: 10px;
   background: #ff853c;
+  padding: 0 10px;
   border-radius: 8px;
   position: absolute;
-  top: 105%;
-  right: 31%;
-  display: none;
+  top: 49px;
+  flex-direction: column;
+  justify-content: center;
+  height: 0; /* 高さ0で最初は非表示に */
+  overflow: hidden; /* 高さ0からはみ出た中身を隠す */
+  transition: 0.5s; /* ホバー時の動きをゆっくりに */
+}
+.works_item li {
+  color: #fff;
+}
+.header_works_item:hover .works_item {
+  height: 41px;
+  padding: 10px;
 }
 
 /*header_contact*/
@@ -101,36 +120,177 @@ li.works_item {
   border-radius: 35px;
   padding: 18px 33px;
 }
-/*headerの余白調整*/
-#worksmore {
-  padding: 182px 0 0 0;
+
+/*about_works*/
+li.about_sub_item,
+li.works_sub_item {
+  color: #fff;
 }
-@media screen and (max-width: 1000px) {
-  .HeaderMenu_pcnav ul {
-    gap: 35px;
+
+/*headerの余白調整*/
+#about,
+#skill,
+#works,
+#contact {
+  padding-top: 112px;
+  margin-top: -112px;
+}
+
+.sp_btn p,
+.sp_btn {
+  display: none;
+}
+@media screen and (max-width: 1100px) {
+  .HeaderMenu_pcnav {
+    display: none;
   }
-  .header_logo {
-    width: 70px;
-    padding-right: 12px;
+  .sp_btn p {
+    display: block;
+    color: #ff853c;
+    position: absolute;
+    top: 10px;
+    left: 6px;
+    font-size: 15px;
   }
-  .header_about_arrow {
-    left: 104%;
+  .sp_btn {
+    display: block;
+    height: 52px;
+    cursor: pointer;
+    width: 52px;
+    border: 2px solid #ff853c;
+    border-radius: 50%;
+    z-index: 100;
+    position: relative;
   }
-  .header_works_arrow {
-    right: 35%;
+  .sp_btn.open {
+    border: 2px solid #fff;
   }
+  .sp_btn span {
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: #ff853c;
+    position: relative;
+    top: 23px;
+    left: 10px;
+    transition: 0.3s;
+  }
+  .sp_btn span::before,
+  .sp_btn span::after {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: #ff853c;
+    position: absolute;
+    transition: 0.3s;
+  }
+  .sp_btn.open span::before,
+  .sp_btn.open span::after {
+    background-color: #fff;
+  }
+  .sp_btn span::before {
+    bottom: 8px;
+  }
+}
+
+.sp_btn.open span {
+  background-color: transparent;
+}
+.sp_btn.open span::before {
+  bottom: 0;
+  transform: rotate(45deg);
+}
+.sp_btn.open span::after {
+  top: 0;
+  transform: rotate(-45deg);
+}
+.HeaderMenu_spnav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(255, 133, 60, 0.5);
+  z-index: 1;
+}
+.HeaderMenu_spnav ul li {
+  color: #fff;
+  text-align: center;
+}
+.about_menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  gap: 90px;
+  font-size: 16px;
+  font-weight: bold;
+}
+.about_item {
+  /* 配置の調節 */
+  background: #ff853c;
+  text-align: center;
+  padding: 0 10px;
+  border-radius: 8px;
+  position: absolute;
+  top: 50px;
+  flex-direction: column;
+  justify-content: center;
+  height: 0; /* 高さ0で最初は非表示に */
+  overflow: hidden; /* 高さ0からはみ出た中身を隠す */
+  transition: 0.5s; /* ホバー時の動きをゆっくりに */
+}
+.sp_header_about_arrow,
+.sp_header_works_arrow {
+  border-top: 3px solid #fff;
+  border-right: 3px solid #fff;
+  width: 7px;
+  height: 7px;
+  transform: rotate(135deg);
+  position: absolute;
+  top: 30%;
+  left: 107%;
+}
+.sp_header_contact a {
+  background: #fff;
+  color: #ff853c;
+  display: flex;
+  max-width: 180px;
+  align-items: center;
+  border: none;
+  border-radius: 35px;
+  padding: 18px 33px;
+}
+
+.sp_button-icon {
+  background: #ff853c;
+  display: flex;
+  width: 16px;
+  max-width: 33px;
+  border-radius: 50%;
+  padding: 10px 8px 10px 8px;
+  margin-right: 4px;
+}
+.HeaderMenu_spnav {
+  display: none;
+}
+.sp_btn.open p {
+  display: none;
 }
 
 /* worksmore */
 .worksmore1_contents {
-  max-width: 1000px;
+  max-width: 1100px;
   margin: 0 auto;
   position: relative;
+  padding: 0 40px;
 }
 .worksmore1_border {
   border-bottom: 1px #333 solid;
   padding-top: 16px;
-  margin: 0 10px 16px 10px;
+  margin-bottom: 16px;
   font-size: 26px;
 }
 .worksmore p {
@@ -142,7 +302,7 @@ li.works_item {
 }
 .worksmore_title {
   text-align: center;
-  padding-bottom: 64px;
+  padding: 60px 0 40px;
   font-size: 40px;
   font-weight: bold;
   color: #ff853c;
@@ -162,7 +322,7 @@ li.works_item {
 }
 #worksmore {
   position: relative;
-  padding-bottom: 130px;
+  padding-top: 104px;
 }
 .worksmore_text {
   max-width: 600px;
@@ -171,12 +331,13 @@ li.works_item {
 }
 .worksmore_text div {
   display: flex;
-  align-items: flex-start;
+  align-items: baseline;
   padding: 16px 0;
   border-bottom: #333 solid 1px;
 }
 .worksmore_text dt {
   width: 20%;
+  font-weight: bold;
 }
 .worksmore_text dd {
   width: 80%;
@@ -199,14 +360,11 @@ li.works_item {
   max-width: 1000px;
   margin: 0 auto;
   align-items: center;
-  padding: 0 10px 130px 10px;
+  padding: 0 10px;
 }
 .worksmore_img_SP {
   display: flex;
   justify-content: center;
-}
-.worksmore_lp img {
-  box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3); /* 影を追加 */
 }
 .works_separator {
   display: inline-block; /* インラインで縦棒を表示 */
@@ -224,7 +382,8 @@ li.works_item {
   height: 70px;
   background-color: #ff853c;
   align-items: center;
-  margin: 0 auto;
+  margin: 130px auto;
+  font-family: serif;
 }
 .worksmore-backbutton a {
   color: #fff;
@@ -246,9 +405,32 @@ li.works_item {
   animation-name: my-fade-in1;
   animation-duration: 2s;
 }
-@media screen and (max-width: 1000px) {
-  .aboutme_text {
-    font-size: 10px;
+@media screen and (max-width: 1100px) {
+  .worksmore_title {
+    font-size: 28px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .worksmore_text div {
+    flex-direction: column;
+  }
+  .worksmore_text dd {
+    padding-top: 10px;
+    width: 100%;
+  }
+  .worksmore_text {
+    padding: 0 40px;
+  }
+  .worksmore_point {
+    padding: 0 40px 60px;
+  }
+  .worksmore_lp {
+    padding: 0 40px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .worksmore_text dt {
+    width: 100%;
   }
 }
 /*footer*/
@@ -273,7 +455,7 @@ footer {
 .FooterMenu_pcnav ul {
   display: flex;
   align-items: center;
-  gap: 68px;
+  gap: 66px;
 }
 .FooterMenu_pcnav li {
   text-align: center;
@@ -312,8 +494,38 @@ footer p {
   padding-bottom: 16px;
   color: #fff;
 }
-
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 768px) {
+  .Footer {
+    height: 660px;
+    flex-direction: column;
+  }
+  .footer_logo {
+    width: 106px;
+  }
+  .FooterMenu_pcnav ul {
+    flex-direction: column;
+  }
+  footer p {
+    padding-bottom: 90px;
+  }
+  .contact_button {
+    width: 314px;
+    height: 74px;
+  }
+  .contact_button_text {
+    font-size: 28px;
+    margin: 16px 95px;
+  }
+}
+/*scroll_circle*/
+.scroll_circle {
+  opacity: 0;
+  transition: 2s;
+}
+.scroll_circle.is-show {
+  opacity: 1;
+}
+@media screen and (max-width: 1100px) {
   .FooterMenu_pcnav ul {
     gap: 35px;
   }
@@ -327,4 +539,30 @@ footer p {
   .footer_works_arrow {
     right: 35%;
   }
+}
+#page-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 14px;
+  line-height: 1;
+  z-index: 100;
+}
+#page-top a {
+  background: #ff853c;
+  text-decoration: none;
+  color: #fff;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  opacity: 0.9;
+  transition: all 1.5s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 13px;
+}
+#page-top a:hover {
+  text-decoration: none;
+  opacity: 0.5;
 }
