--- a/css/about.css
+++ b/css/about.css
@@ -138,6 +138,9 @@ li.works_sub_item {
 .sp_btn p {
   display: none;
 }
+.sp_btn {
+  display: none;
+}
 @media screen and (max-width: 1100px) {
   .HeaderMenu_pcnav {
     display: none;
@@ -299,7 +302,7 @@ li.works_sub_item {
   justify-content: space-between;
   align-items: flex-start;
   position: relative;
-  max-width: 1000px;
+  max-width: 1100px;
   margin: 0px auto;
   padding: 0 20px 163px;
 }
@@ -374,28 +377,24 @@ img.aboutme_photo {
   z-index: -100;
 }
 @media screen and (max-width: 1100px) {
-  .aboutme_text {
-    font-size: 10px;
-  }
-}
-@media screen and (max-width: 768px) {
   .aboutme {
-    padding: 104px 0 0;
+    padding-top: 104px;
   }
   .aboutme_title {
     font-size: 28px;
     padding: 60px 0 40px;
   }
   .aboutme_text {
-    padding: 0 0 0 28px;
-    max-width: 768px;
-    width: 90%;
+    padding: 0 28px;
+    max-width: 1100px;
+    width: 100%;
+    box-sizing: border-box;
   }
   .aboutme_photo1 {
     display: block;
     margin: 0;
     width: 100%;
-    max-width: 768px;
+    max-width: 1100px;
     z-index: 100;
   }
   .aboutme_photo {
@@ -403,7 +402,7 @@ img.aboutme_photo {
   }
   .aboutme_contents {
     flex-direction: column;
-    padding: 0 0 90px;
+    padding: 0 0 46px;
   }
   .aboutme_text1 {
     font-size: 28px;
@@ -531,4 +530,30 @@ footer p {
   .footer_works_arrow {
     right: 35%;
   }
+}
+#page-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 14px;
+  line-height: 1;
+  z-index: 100;
+}
+#page-top a {
+  background: #ff853c;
+  text-decoration: none;
+  color: #fff;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  opacity: 0.9;
+  transition: all 1.5s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 13px;
+}
+#page-top a:hover {
+  text-decoration: none;
+  opacity: 0.5;
 }
