--- a/css/thanks.css
+++ b/css/thanks.css
@@ -177,3 +177,29 @@ p {
   text-align: center;
   font-weight: bold;
 }
+#page-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 14px;
+  line-height: 1;
+  z-index: 100;
+}
+#page-top a {
+  background: #ff853c;
+  text-decoration: none;
+  color: #fff;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  opacity: 0.9;
+  transition: all 1.5s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 13px;
+}
+#page-top a:hover {
+  text-decoration: none;
+  opacity: 0.5;
+}
