--- a/css/works.css
+++ b/css/works.css
@@ -138,6 +138,9 @@ li.works_sub_item {
 .sp_btn p {
   display: none;
 }
+.sp_btn {
+  display: none;
+}
 @media screen and (max-width: 1100px) {
   .HeaderMenu_pcnav {
     display: none;
@@ -281,10 +284,12 @@ li.works_sub_item {
 /* worksmore */
 .worksmore {
   overflow: hidden;
+  padding-top: 104px;
 }
 .worksmore_title {
   text-align: center;
-  padding-bottom: 64px;
+  font-size: 28px;
+  padding: 60px 0 40px;
   font-size: 40px;
   font-weight: bold;
   color: #ff853c;
@@ -380,12 +385,24 @@ li.works_sub_item {
 .works_img:hover .works_img img {
   transform: scale(1.1); /* ホバー時に画像を拡大 */
 }
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 981px) {
+  .works_img {
+    width: 315px;
+    height: 315px;
+  }
+  .works.works_resize {
+    font-size: 14px;
+  }
+  .worksmore_title {
+    font-size: 28px;
+  }
+}
+@media screen and (max-width: 768px) {
   .worksmore_contents {
     flex-direction: column;
     align-items: center;
     max-width: 768px;
-    padding: 0 20px 108px;
+    padding: 0 20px 4px;
   }
   .works {
     max-width: 100%;
@@ -502,4 +519,30 @@ footer p {
   .footer_works_arrow {
     right: 35%;
   }
+}
+#page-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 14px;
+  line-height: 1;
+  z-index: 100;
+}
+#page-top a {
+  background: #ff853c;
+  text-decoration: none;
+  color: #fff;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  opacity: 0.9;
+  transition: all 1.5s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 13px;
+}
+#page-top a:hover {
+  text-decoration: none;
+  opacity: 0.5;
 }
