--- a/css/style.css
+++ b/css/style.css
@@ -228,31 +228,6 @@ li.works_sub_item {
   font-size: 16px;
   font-weight: bold;
 }
-.about_item {
-  /* 配置の調節 */
-  background: #ff853c;
-  text-align: center;
-  padding: 0 10px;
-  border-radius: 8px;
-  position: absolute;
-  top: 50px;
-  flex-direction: column;
-  justify-content: center;
-  height: 0; /* 高さ0で最初は非表示に */
-  overflow: hidden; /* 高さ0からはみ出た中身を隠す */
-  transition: 0.5s; /* ホバー時の動きをゆっくりに */
-}
-.sp_header_about_arrow,
-.sp_header_works_arrow {
-  border-top: 3px solid #fff;
-  border-right: 3px solid #fff;
-  width: 7px;
-  height: 7px;
-  transform: rotate(135deg);
-  position: absolute;
-  top: 30%;
-  left: 107%;
-}
 .sp_header_contact a {
   background: #fff;
   color: #ff853c;
@@ -263,7 +238,30 @@ li.works_sub_item {
   border-radius: 35px;
   padding: 18px 33px;
 }
-
+.sp_about_me a {
+  background: #ff853c;
+  text-align: center;
+  border-radius: 8px;
+  position: absolute;
+  top: 37%;
+  left: 46%;
+  flex-direction: column;
+  justify-content: center;
+  height: auto;
+  padding: 8px;
+}
+.sp_works_more a {
+  background: #ff853c;
+  border-radius: 8px;
+  position: absolute;
+  top: 110%;
+  left: -34%;
+  flex-direction: column;
+  justify-content: center;
+  height: auto;
+  padding: 8px;
+  width: 100px;
+}
 .sp_button-icon {
   background: #ff853c;
   display: flex;
@@ -554,6 +552,7 @@ li.works_sub_item {
   text-align: center;
   font-family: serif;
   font-weight: bold;
+  display: flex;
 }
 .about_circle {
   position: relative;
@@ -750,27 +749,31 @@ li.works_sub_item {
 }
 .skill_line_designs {
   width: 1px;
-  height: 298px;
+  max-height: 298px;
   background: #3333;
   margin-top: 35px;
+  height: 100%;
 }
 .skill_line_coding {
   width: 1px;
-  height: 298px;
+  max-height: 298px;
   background: #3333;
   margin-top: 30px;
+  height: 100%;
 }
 .skill_line_accounting {
   width: 1px;
-  height: 298px;
+  max-height: 298px;
   background: #3333;
   margin-top: 55px;
+  height: 100%;
 }
 .skill_line_welfare {
   width: 1px;
-  height: 298px;
+  max-height: 298px;
   background: #3333;
   margin-top: 35px;
+  height: 100%;
 }
 .skill_circle1 p {
   transform: rotate(90deg);
@@ -955,6 +958,7 @@ li.works_sub_item {
   text-align: center;
   font-family: serif;
   font-weight: bold;
+  display: flex;
 }
 .works_circle1 {
   position: relative;
