--- a/css/about.css
+++ b/css/about.css
@@ -229,31 +229,6 @@ li.works_sub_item {
   font-size: 18px;
   font-weight: bold;
 }
-.about_item {
-  /* 配置の調節 */
-  background: #ff853c;
-  text-align: center;
-  padding: 0 10px;
-  border-radius: 8px;
-  position: absolute;
-  top: 50px;
-  flex-direction: column;
-  justify-content: center;
-  height: 0; /* 高さ0で最初は非表示に */
-  overflow: hidden; /* 高さ0からはみ出た中身を隠す */
-  transition: 0.5s; /* ホバー時の動きをゆっくりに */
-}
-.sp_header_about_arrow,
-.sp_header_works_arrow {
-  border-top: 3px solid #fff;
-  border-right: 3px solid #fff;
-  width: 7px;
-  height: 7px;
-  transform: rotate(135deg);
-  position: absolute;
-  top: 30%;
-  left: 107%;
-}
 .sp_header_contact a {
   background: #fff;
   color: #ff853c;
@@ -280,7 +255,34 @@ li.works_sub_item {
 .sp_btn.open p {
   display: none;
 }
-
+.sp_about_me a {
+  background: #ff853c;
+  text-align: center;
+  border-radius: 8px;
+  position: absolute;
+  top: 105%;
+  left: -4%;
+  flex-direction: column;
+  justify-content: center;
+  height: auto;
+  padding: 8px;
+  width: 100%;
+}
+.sp_works_more a {
+  background: #ff853c;
+  border-radius: 8px;
+  position: absolute;
+  top: 110%;
+  left: -32%;
+  flex-direction: column;
+  justify-content: center;
+  height: auto;
+  padding: 8px;
+  width: 150%;
+}
+li.sp_header_about_item {
+  position: relative;
+}
 /* aboutme */
 .aboutme {
   overflow: hidden;
