--- a/css/works.css
+++ b/css/works.css
@@ -193,6 +193,30 @@ li.works_sub_item {
   .sp_btn span::before {
     bottom: 8px;
   }
+  .sp_about_me a {
+    background: #ff853c;
+    text-align: center;
+    border-radius: 8px;
+    position: absolute;
+    top: 37%;
+    left: 45%;
+    flex-direction: column;
+    justify-content: center;
+    height: auto;
+    padding: 8px;
+  }
+  .sp_works_more a {
+    background: #ff853c;
+    border-radius: 8px;
+    position: absolute;
+    top: 107%;
+    left: -32%;
+    flex-direction: column;
+    justify-content: center;
+    height: auto;
+    padding: 8px;
+    width: 110px;
+  }
 }
 
 .sp_btn.open span {
@@ -242,17 +266,6 @@ li.works_sub_item {
   height: 0; /* 高さ0で最初は非表示に */
   overflow: hidden; /* 高さ0からはみ出た中身を隠す */
   transition: 0.5s; /* ホバー時の動きをゆっくりに */
-}
-.sp_header_about_arrow,
-.sp_header_works_arrow {
-  border-top: 3px solid #fff;
-  border-right: 3px solid #fff;
-  width: 7px;
-  height: 7px;
-  transform: rotate(135deg);
-  position: absolute;
-  top: 30%;
-  left: 107%;
 }
 .sp_header_contact a {
   background: #fff;
@@ -410,6 +423,10 @@ li.works_sub_item {
   .works_img {
     width: 100%;
     height: 100%;
+  }
+  img.works_travel {
+    width: 77%;
+    margin: 0 auto;
   }
 }
 
