--- a/css/style.css
+++ b/css/style.css
@@ -243,12 +243,10 @@ li.works_sub_item {
   text-align: center;
   border-radius: 8px;
   position: absolute;
-  top: 37%;
-  left: 46%;
-  flex-direction: column;
-  justify-content: center;
+  top: 115%;
+  left: 0%;
   height: auto;
-  padding: 8px;
+  padding: 9px 3px;
 }
 .sp_works_more a {
   background: #ff853c;
@@ -277,7 +275,9 @@ li.works_sub_item {
 .sp_btn.open p {
   display: none;
 }
-
+.sp_header_about_item {
+  position: relative;
+}
 /*FV*/
 .home {
   display: flex;
