--- a/css/style.css
+++ b/css/style.css
@@ -229,8 +229,8 @@ li.works_sub_item {
   font-weight: bold;
 }
 .sp_header_contact a {
-  background: #fff;
-  color: #ff853c;
+  background: #ff853c;
+  color: #fff;
   display: flex;
   max-width: 180px;
   align-items: center;
@@ -261,7 +261,7 @@ li.works_sub_item {
   width: 100px;
 }
 .sp_button-icon {
-  background: #ff853c;
+  background: #fff;
   display: flex;
   width: 16px;
   max-width: 33px;
