--- a/css/thanks.css
+++ b/css/thanks.css
@@ -125,7 +125,269 @@ li.works_sub_item {
     right: 35%;
   }
 }
+/*header*/
+.Header {
+  display: flex;
+  position: fixed;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 20px 8%;
+  box-sizing: border-box;
+  z-index: 200;
+  background-color: #fff;
+}
+.header_logo {
+  width: 129px;
+  background-color: #fff;
+}
+.HeaderMenu_pcnav {
+  display: flex;
+  gap: 46px;
+  font-weight: bold;
+  position: relative;
+}
+.HeaderMenu_pcnav ul {
+  display: flex;
+  align-items: center;
+  gap: 68px;
+}
+.HeaderMenu_pcnav ul li {
+  text-align: center;
+}
 
+/*header_about*/
+.header_about_arrow {
+  width: 7px;
+  height: 7px;
+  border-top: 3px solid #3333;
+  border-right: 3px solid #3333;
+  transform: rotate(135deg);
+  position: absolute;
+  top: 30%;
+  left: 107%;
+}
+.header_about_item {
+  position: relative;
+  cursor: pointer;
+}
+.about_item {
+  /* 配置の調節 */
+  background: #ff853c;
+  padding: 0 10px;
+  border-radius: 8px;
+  position: absolute;
+  top: 50px;
+  flex-direction: column;
+  justify-content: center;
+  height: 0; /* 高さ0で最初は非表示に */
+  overflow: hidden; /* 高さ0からはみ出た中身を隠す */
+  transition: 0.5s; /* ホバー時の動きをゆっくりに */
+}
+.about_item li {
+  color: #fff;
+}
+.header_about_item:hover .about_item {
+  height: 41px;
+  padding: 10px;
+}
+/*header_works*/
+.header_works_item {
+  position: relative;
+}
+.header_works_arrow {
+  width: 7px;
+  height: 7px;
+  border-top: 3px solid #3333;
+  border-right: 3px solid #3333;
+  transform: rotate(135deg);
+  position: absolute;
+  top: 40%;
+  right: -33%;
+}
+.works_item {
+  background: #ff853c;
+  padding: 0 10px;
+  border-radius: 8px;
+  position: absolute;
+  top: 49px;
+  flex-direction: column;
+  justify-content: center;
+  height: 0; /* 高さ0で最初は非表示に */
+  overflow: hidden; /* 高さ0からはみ出た中身を隠す */
+  transition: 0.5s; /* ホバー時の動きをゆっくりに */
+}
+.works_item li {
+  color: #fff;
+}
+.header_works_item:hover .works_item {
+  height: 41px;
+  padding: 10px;
+}
+
+/*header_contact*/
+.button-icon {
+  display: flex;
+  width: 16px;
+  max-width: 33px;
+  background: #fff;
+  border-radius: 50%;
+  padding: 10px 8px 10px 8px;
+  margin-right: 4px;
+}
+.header_contact a {
+  display: flex;
+  max-width: 180px;
+  align-items: center;
+  background: #ff853c;
+  color: #fff;
+  border: none;
+  border-radius: 35px;
+  padding: 18px 33px;
+}
+
+/*about_works*/
+li.about_sub_item,
+li.works_sub_item {
+  color: #fff;
+}
+
+/*headerの余白調整*/
+#about,
+#skill,
+#works,
+#contact {
+  padding-top: 112px;
+  margin-top: -112px;
+}
+
+.sp_btn p,
+.sp_btn {
+  display: none;
+}
+@media screen and (max-width: 1100px) {
+  .HeaderMenu_pcnav {
+    display: none;
+  }
+  .sp_btn p {
+    display: block;
+    color: #ff853c;
+    position: absolute;
+    top: 26px;
+    left: 6px;
+    font-size: 15px;
+  }
+  .sp_btn {
+    display: block;
+    height: 52px;
+    cursor: pointer;
+    width: 52px;
+    border: 2px solid #ff853c;
+    border-radius: 50%;
+    z-index: 100;
+    position: relative;
+  }
+  .sp_btn.open {
+    border: 2px solid #fff;
+  }
+  .sp_btn span {
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: #ff853c;
+    position: relative;
+    top: 23px;
+    left: 10px;
+    transition: 0.3s;
+  }
+  .sp_btn span::before,
+  .sp_btn span::after {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: #ff853c;
+    position: absolute;
+    transition: 0.3s;
+  }
+  .sp_btn.open span::before,
+  .sp_btn.open span::after {
+    background-color: #fff;
+  }
+  .sp_btn span::before {
+    bottom: 8px;
+  }
+}
+
+.sp_btn.open span {
+  background-color: transparent;
+}
+.sp_btn.open span::before {
+  bottom: 0;
+  transform: rotate(45deg);
+}
+.sp_btn.open span::after {
+  top: 0;
+  transform: rotate(-45deg);
+}
+.HeaderMenu_spnav {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(255, 133, 60, 0.5);
+  z-index: 1;
+}
+.HeaderMenu_spnav ul li {
+  color: #fff;
+  text-align: center;
+}
+.about_menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  gap: 35px;
+  font-size: 16px;
+  font-weight: bold;
+}
+.sp_header_contact a {
+  background: #fff;
+  color: #ff853c;
+  display: flex;
+  max-width: 180px;
+  align-items: center;
+  border: none;
+  border-radius: 35px;
+  padding: 18px 33px;
+}
+
+.sp_button-icon {
+  background: #ff853c;
+  display: flex;
+  width: 16px;
+  max-width: 33px;
+  border-radius: 50%;
+  padding: 10px 8px 10px 8px;
+  margin-right: 4px;
+}
+.HeaderMenu_spnav {
+  display: none;
+}
+.sp_btn.open p {
+  display: none;
+}
+.sp_header_about_item {
+  position: relative;
+}
+.sp_about_me {
+  display: none; /* 初期状態で非表示 */
+}
+.sp_about_me .open {
+  display: block; /* JavaScriptで切り替える */
+}
 /* aboutme */
 .thanks {
   overflow: hidden;
