--- a/css/works.css
+++ b/css/works.css
@@ -268,8 +268,8 @@ li.works_sub_item {
   transition: 0.5s; /* ホバー時の動きをゆっくりに */
 }
 .sp_header_contact a {
-  background: #fff;
-  color: #ff853c;
+  background: #ff853c;
+  color: #fff;
   display: flex;
   max-width: 180px;
   align-items: center;
@@ -279,7 +279,7 @@ li.works_sub_item {
 }
 
 .sp_button-icon {
-  background: #ff853c;
+  background: #fff;
   display: flex;
   width: 16px;
   max-width: 33px;
