--- a/css/works_1.css
+++ b/css/works_1.css
@@ -140,6 +140,7 @@ li.works_sub_item {
 .sp_btn {
   display: none;
 }
+
 @media screen and (max-width: 1100px) {
   .HeaderMenu_pcnav {
     display: none;
@@ -193,7 +194,12 @@ li.works_sub_item {
     bottom: 8px;
   }
 }
-
+.HeaderMenu_spnav {
+  display: none;
+}
+.sp_btn.open p {
+  display: none;
+}
 .sp_btn.open span {
   background-color: transparent;
 }
@@ -213,6 +219,7 @@ li.works_sub_item {
   height: 100vh;
   background-color: rgba(255, 133, 60, 0.5);
   z-index: 1;
+  display: block;
 }
 .HeaderMenu_spnav ul li {
   color: #fff;
@@ -228,34 +235,9 @@ li.works_sub_item {
   font-size: 16px;
   font-weight: bold;
 }
-.about_item {
-  /* 配置の調節 */
-  background: #ff853c;
-  text-align: center;
-  padding: 0 10px;
-  border-radius: 8px;
-  position: absolute;
-  top: 50px;
-  flex-direction: column;
-  justify-content: center;
-  height: 0; /* 高さ0で最初は非表示に */
-  overflow: hidden; /* 高さ0からはみ出た中身を隠す */
-  transition: 0.5s; /* ホバー時の動きをゆっくりに */
-}
-.sp_header_about_arrow,
-.sp_header_works_arrow {
-  border-top: 3px solid #fff;
-  border-right: 3px solid #fff;
-  width: 7px;
-  height: 7px;
-  transform: rotate(135deg);
-  position: absolute;
-  top: 30%;
-  left: 107%;
-}
 .sp_header_contact a {
-  background: #fff;
-  color: #ff853c;
+  background: #ff853c;
+  color: #fff;
   display: flex;
   max-width: 180px;
   align-items: center;
@@ -263,9 +245,8 @@ li.works_sub_item {
   border-radius: 35px;
   padding: 18px 33px;
 }
-
 .sp_button-icon {
-  background: #ff853c;
+  background: #fff;
   display: flex;
   width: 16px;
   max-width: 33px;
@@ -273,11 +254,9 @@ li.works_sub_item {
   padding: 10px 8px 10px 8px;
   margin-right: 4px;
 }
-.HeaderMenu_spnav {
-  display: none;
-}
-.sp_btn.open p {
-  display: none;
+
+.sp_header_about_item {
+  position: relative;
 }
 
 /* worksmore */
