--- a/css/thanks.css
+++ b/css/thanks.css
@@ -354,8 +354,8 @@ li.works_sub_item {
   font-weight: bold;
 }
 .sp_header_contact a {
-  background: #fff;
-  color: #ff853c;
+  background: #ff853c;
+  color: #fff;
   display: flex;
   max-width: 180px;
   align-items: center;
@@ -365,7 +365,7 @@ li.works_sub_item {
 }
 
 .sp_button-icon {
-  background: #ff853c;
+  background: #fff;
   display: flex;
   width: 16px;
   max-width: 33px;
