--- a/css/works.css
+++ b/css/works.css
@@ -424,7 +424,8 @@ li.works_sub_item {
     width: 100%;
     height: 100%;
   }
-  img.works_travel {
+  img.works_travel,
+  img.works_burger {
     width: 77%;
     margin: 0 auto;
   }
